--- a/.drone.yml
+++ b/.drone.yml
@@ -6,3 +6,11 @@ steps:
     image: alpine
     commands:
       - echo -n "this-is-a-test" > .tags
+  - name: read
+    image: alpine
+    commands:
+      - echo -n "this-is-a-test" > .tags
+  - name: update
+    image: alpine
+    commands:
+      - echo -n "this-is-a-test" > .tags
